# bmp2ebm

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: main.cpp
